# Train_Tracking_IOT

./: .gitignore  CMakeLists.txt  README.md  demo_live.py  generate_thesis_charts_matplotlib.py  log_heap.txt  log_mqtt.py  parse_heap.py  sdkconfig.defaults
Demo/: .gitkeep
Docs/: Báo cáo DATN.docx  baocao_text.txt  danh_sach_can_sua_bao_cao.md  log.txt  phan_tich_thiet_ke_buffer.md  tong_hop_loi_va_giai_phap.md
Hardware_Architecture/: .gitkeep
Software_Architecture/: .gitkeep
main/: CMakeLists.txt  main.c
main/config/: pin_config.h  sys_config.h
main/drivers/: sd_log.c  sd_log.h
main/hal/: lte_at.c  lte_at.h
main/services/: cmd_handler.c  cmd_handler.h  mqtt_service.c  mqtt_service.h  pipeline.c  pipeline.h  sensor_fake.c  sensor_fake.h
main/utils/: logger.c  logger.h
scripts_bieu_do/: generate_chapter4_charts.py  generate_slide_chart.py  plot_real_interleaved_flush.py  ve_so_do_chuong3.py  ve_so_do_phan_cung.py
